--- a/day1/package.json
+++ b/day1/package.json
@@ -2,7 +2,7 @@
   "name": "day1",
   "version": "1.0.0",
   "description": "",
-  "main": "tut1.js",
+  "main": "howexport.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,4 @@
   "author": "",
   "license": "ISC",
   "type": "module"
- 
- 
 }
